# ConventionalChangelog

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ConventionalChangelog/: _types.py  main.py  reader.py  writer.py
tests/: __init__.py  test_reader.py  test_writer.py  utils.py
tests/small_archive/: data.json  result.md
